# EIRBS6-PAP2-Carcassonne

./: .gitignore  .travis.yml  CMakeLists.txt  CONVENTIONS.md  Doxyfile  Makefile  README.md  authors.txt  cmake_build.sh  cmake_clean.sh
src/: CMakeLists.txt
src/client/: aux_functions.c  auxfunctions.c  client.h  client1.c  client2.c  client_4410_1.c  client_4410_2.c  client_4410_3.c  client_4410_4.c  client_4410_always_choose_lower_left.c  client_4410_always_choose_upper_right.c  client_4410_always_first.c  client_4410_always_last.c  client_4410_choose_always_random_valid.c  client_4410_random_valid.c  client_4410_random_valid_2_tmp.c  client_functions.c  moves.c  moves.h  toto.c
src/client/common_clients_functions/: client.c  client.h  micro_board.c  micro_board.h
src/common/: area_type.c  area_type.h  board.c  board.h  card.c  card.h  card_type.c  card_type.h  cards.c  cards.h  com_func_ptrs.c  com_func_ptrs.h  common_interface.h  deck.c  deck.h  interface.c  interface.h  meeple.c  meeple.h  pile.c  pile.h  projCarcassonneInterface.h  queue.c  queue.h  set.c  set.h  stack.c  stack.h  utils.c  utils.h  zone.c  zone.h
src/common/ADT/: queue.c  queue.h  set.c  set.h  stack.c  stack.h
src/server/: board.c  board.h  client_container.c  client_container.h  function_pointers.c  function_pointers.h  game.c  game.h  meeple.h  player.c  player.h  player_container.c  player_container.h  server.c  server.h  server_func_ptrs.c  server_func_ptrs.h
src/ui/: app.c  app.h  card_view.c  card_view.h  game_view.c  game_view.h  image.c  image.h  menu_view.c  menu_view.h  text.c  text.h
tst/: CMakeLists.txt  Makefile  common_tests_utils.c  common_tests_utils.h  test_board.c  test_card.c  test_client.c  test_client_aux_functions.c  test_deck.c  test_meeple.c  test_pile.c  test_queue.c  test_set.c  test_stack.c  test_utils.h  test_zone.c
